deploy/services/base/web/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-www-redirect
spec:
  redirectRegex:
    regex: ^https://www.imagedatahiding.com(.*)
    replacement: https://imagedatahiding.com${1}
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`imagedatahiding.com`) || Host(`www.imagedatahiding.com`)
      kind: Rule
      middlewares:
        - name: web-www-redirect
      services:
        - name: web-svc
          kind: Service
          port: 80
  tls:
    secretName: web-cert
